@@ -14,6 +14,7 @@ apt (0.9.8.3) UNRELEASED; urgency=low
   * don't explicitly init ExtractTar InFd with invalid fd
   * OpenDescriptor should autoclose fd always on error (Closes: #704608)
   * fail in CopyFile if the FileFds have error flag set
+  * ensure state-dir exists before coyping cdrom files
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Sun, 09 Jun 2013 15:06:24 +0200
 
